--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
+  hive: ^2.0.6
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
