--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   equatable: ^2.0.3
   hive: ^2.0.6
   hive_flutter: ^1.1.0
+  flutter_riverpod: ^1.0.3
+  get: ^4.6.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
