--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  adaptive_dialog: ^1.5.0+1
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   hive: ^2.0.6
@@ -43,6 +44,8 @@ dependencies:
   flutter_local_notifications: ^9.4.0
   timezone: ^0.8.0
   flutter_native_timezone: ^2.0.0
+  percent_indicator: ^4.0.0
+  timeago: ^3.2.2
 
 dev_dependencies:
   flutter_test:
